src/objects/inscor__Company_Sharing_Setting__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Access_Type__c</fullName>
        <label>Access Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Access</fullName>
                </value>
                <value>
                    <fullName>Public</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>inscor__Company__c</referenceTo>
        <relationshipLabel>Company Sharing Settings</relationshipLabel>
        <relationshipName>Company_Sharing_Settings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>inscor__Employee__c</referenceTo>
        <relationshipLabel>Company Sharing Settings</relationshipLabel>
        <relationshipName>Company_Sharing_Settings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Object_Name__c</fullName>
        <label>Object Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>inscor__Account_Approvals__c</fullName>
                    <label>Account Approvals</label>
                </value>
                <value>
                    <fullName>inscor__Account_Engagement__c</fullName>
                    <label>Account Engagement</label>
                </value>
                <value>
                    <fullName>inscor__Alternate__c</fullName>
                    <label>Alternate</label>
                </value>
                <value>
                    <fullName>inscor__Approval_Levels__c</fullName>
                    <label>Approval Levels</label>
                </value>
                <value>
                    <fullName>inscor__ASN__c</fullName>
                    <label>ASN</label>
                </value>
                <value>
                    <fullName>inscor__Assistant_Result__c</fullName>
                    <label>Assistant Result</label>
                </value>
                <value>
                    <fullName>inscor__Assistant_Setting__c</fullName>
                    <label>Assistant Setting</label>
                </value>
                <value>
                    <fullName>inscor__Consignor_Payable__c</fullName>
                    <label>Consignor Payable</label>
                </value>
                <value>
                    <fullName>inscor__Customer_Contract_Price__c</fullName>
                    <label>Customer Contract Price</label>
                </value>
                <value>
                    <fullName>inscor__Customer_Exchange_Summary__c</fullName>
                    <label>Customer Exchange Summary</label>
                </value>
                <value>
                    <fullName>inscor__Customer_Quote__c</fullName>
                    <label>Customer Quote</label>
                </value>
                <value>
                    <fullName>inscor__Customs_Entry__c</fullName>
                    <label>Customs Entry</label>
                </value>
                <value>
                    <fullName>inscor__Cycle_Count__c</fullName>
                    <label>Cycle Count</label>
                </value>
                <value>
                    <fullName>inscor__Cycle_Count_Discrepancy__c</fullName>
                    <label>Cycle Count Discrepancy</label>
                </value>
                <value>
                    <fullName>inscor__Cycle_Count_Entry__c</fullName>
                    <label>Cycle Count Entry</label>
                </value>
                <value>
                    <fullName>inscor__Cycle_Count_Line__c</fullName>
                    <label>Cycle Count Line</label>
                </value>
                <value>
                    <fullName>inscor__Docking__c</fullName>
                    <label>Docking</label>
                </value>
                <value>
                    <fullName>inscor__Form_Options__c</fullName>
                    <label>Form Options</label>
                </value>
                <value>
                    <fullName>inscor__Inventory_Line__c</fullName>
                    <label>Inventory Line</label>
                </value>
                <value>
                    <fullName>inscor__Invoice__c</fullName>
                    <label>Invoice</label>
                </value>
                <value>
                    <fullName>inscor__Lease__c</fullName>
                    <label>Lease</label>
                </value>
                <value>
                    <fullName>inscor__Manifest__c</fullName>
                    <label>Manifest</label>
                </value>
                <value>
                    <fullName>inscor__Owner_Code__c</fullName>
                    <label>Owner Code</label>
                </value>
                <value>
                    <fullName>inscor__Owner_Code_Adjustment__c</fullName>
                    <label>Owner Code Adjustment</label>
                </value>
                <value>
                    <fullName>inscor__Payment_Voucher__c</fullName>
                    <label>Payment Voucher</label>
                </value>
                <value>
                    <fullName>inscor__Price__c</fullName>
                    <label>Price</label>
                </value>
                <value>
                    <fullName>inscor__Printer__c</fullName>
                    <label>Printer</label>
                </value>
                <value>
                    <fullName>inscor__Purchase_Order__c</fullName>
                    <label>Purchase Order</label>
                </value>
                <value>
                    <fullName>inscor__Quick_Comment__c</fullName>
                    <label>Quick Comment</label>
                </value>
                <value>
                    <fullName>inscor__Receipt__c</fullName>
                    <label>Receipt</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Company Sharing Setting</label>
    <listViews>
        <fullName>inscor__All</fullName>
        <columns>NAME</columns>
        <columns>inscor__Company__c</columns>
        <columns>inscor__Employee__c</columns>
        <columns>inscor__Object_Name__c</columns>
        <columns>inscor__Access_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>inscor__Employee__c</field>
            <operation>equals</operation>
            <value>EMP-3</value>
        </filters>
        <label>All - EMP 3</label>
    </listViews>
    <nameField>
        <displayFormat>CSS-{0}</displayFormat>
        <label>Company Sharing Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Company Sharing Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>